[metadata]
name = VExD
version = 1.0.0
description = A WSGI web app for identifying GEO experiments of viral infection
author = Phillip Dexheimer
author_email = phillip.dexheimer@cchmc.org
license = GPLv3
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/pdexheimer/vexd
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    
[options]
packages = find:
install_requires =
    Flask>=2.0.0
    marshmallow
    pymongo
    webargs
    python-dotenv
    pandas
    pyarrow
python_requires = >=3.8
